--- a/MvcApp1/Views/Business/School.cshtml
+++ b/MvcApp1/Views/Business/School.cshtml
@@ -2,7 +2,32 @@
     ViewBag.Title = "School";
 }
 
-<div class="container" style="min-height:500px">
-    <h4>@ViewBag.Title</h4>
-    <h5>@ViewBag.Message</h5>
+<div class="parallax-container">
+    <div class="parallax"><img src="~/images/p1.jpg"></div>
+</div>
+<div class="section white">
+    <div class="container" style="min-height:300px">
+        <h4>@ViewBag.Title</h4>
+        <h5>@ViewBag.Message</h5>
+    </div>
+    <div class="row container">
+        <h2 class="header">Parallax</h2>
+        <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+    </div>
+</div>
+<div class="parallax-container">
+    <div class="parallax"><img src="~/images/p2.jpg"></div>
+</div>
+<div class="section white">
+    <div class="container" style="min-height:300px">
+        <h4>@ViewBag.Title</h4>
+        <h5>@ViewBag.Message</h5>
+    </div>
+    <div class="row container">
+        <h2 class="header">Parallax</h2>
+        <p class="grey-text text-darken-3 lighten-3">Parallax is an effect where the background content or image in this case, is moved at a different speed than the foreground content while scrolling.</p>
+    </div>
+</div>
+<div class="parallax-container">
+    <div class="parallax"><img src="~/images/p1.jpg"></div>
 </div>
