--- a/MvcApp1/Views/Shared/_Layout.cshtml
+++ b/MvcApp1/Views/Shared/_Layout.cshtml
@@ -169,7 +169,10 @@
             }
             );
             $(".button-collapse").sideNav();
-            $('.slider').slider({ full_width: true, height:300});         
+            $('.slider').slider({ full_width: true, height: 300 });
+            $(document).ready(function () {
+                $('.parallax').parallax();
+            });
         })
     </script>
 </body>
