--- a/MvcApp1/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/MvcApp1/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -12,14 +12,21 @@ else
     using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = ViewBag.ReturnUrl }))
     {
     @Html.AntiForgeryToken()
-    <fieldset id="socialLoginList">
-        <legend>Log in using another service</legend>
+   <!-- <fieldset id="socialLoginList">
+        <legend>Log in using another service</legend> -->
         <p>
         @foreach (AuthenticationClientData p in Model)
         {
-            <button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>
+            @*<button type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account">@p.DisplayName</button>*@
+            var color = "#dd4b39";
+            if (p.DisplayName == "Facebook") { color = "#3b5998"; }   
+    <button class="btn waves-effect waves-light" type="submit" name="provider" value="@p.AuthenticationClient.ProviderName" title="Log in using your @p.DisplayName account" style="width:300px; background-color:@color">
+        Login with @p.DisplayName
+        <i class="mdi-content-send right"></i>
+    </button>
+
         }
         </p>
-    </fieldset>
+   <!--  </fieldset> -->
     }
 }
