About page - started design

--- a/MvcApp1/Views/Home/About.cshtml
+++ b/MvcApp1/Views/Home/About.cshtml
@@ -2,11 +2,39 @@
     ViewBag.Title = "About";
 }
 
-<hgroup class="title">
+@*<hgroup class="title">
     <h2>@ViewBag.Message</h2>
-</hgroup>
+</hgroup>*@
 
-<div class="section" style="min-height:400px"></div>
+<div class="" style="">
+<div class="" style="border:solid 1px #B88D54; height:180px; background-color:#B88D54">
+    <div style="width:75%;margin: 0 auto; color:white">
+        <h6 style="font-weight:bold">About</h6>
+        <h2 style="font-weight:900">Paperseed</h2>
+    </div>
+</div>
+<div class="" style="height:400px;width:75%;margin: 0 auto;">
+    <div class="" style="border-radius:15px;background-color:white; padding:10px 20px 10px 20px; float:left; margin-top:-50px;min-width:400px; width:75%; height:400px;">
+        <h5>Who we are..</h5>
+    </div>
+    <div class="" style="padding-left:20px;float:right; width:25%; height:350px">
+        <h6>Contact us</h6>
+        <div style="border-radius:10px; padding:7px; background-color:#F9E4B8; height:150px;">
+            Address
+        </div>
+        <h6>Services</h6>
+        <div style="border-radius:10px; padding:7px; background-color:#F9E4B8; height:150px;">
+            <ul>
+                <li>Technology partner</li>
+                <li>Consulting</li>
+                <li>Web designing</li>
+                <li>Hosting</li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+</div>
 
 @*<article>
     <p>
