--- a/MvcApp1/Views/Home/Index.cshtml
+++ b/MvcApp1/Views/Home/Index.cshtml
@@ -28,6 +28,60 @@
         <div class="divider"></div>
     </div>
 
+    <div class="row">
+        <div class="col s12 m3">
+            <div class="card">
+                <div class="card-content white-text" style="background-color:#E75C5C">
+                    <span class="card-title"><i class="small mdi-maps-local-grocery-store"></i>&nbsp;Retail</span>
+                    <p>
+                        Grow your business with presence in the Internet. Add product lists, ads, e-commerce and more.
+                    </p>
+                </div>
+                <div class="card-action white">
+                    <a href="Business/Retail" style="color:red">Know more &gt;</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m3">
+            <div class="card">
+                <div class="card-content white-text" style="background-color:#E75C5C">
+                    <span class="card-title"><i class="small mdi-social-location-city"></i>&nbsp;RealEstate</span>
+                    <p>
+                        Enable buyers to have a virtual tour in and around your properties. Features gallery and more.
+                    </p>
+                </div>
+                <div class="card-action white">
+                    <a href="Business/RealEstate" style="color:red">Know more &gt;</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m3">
+            <div class="card">
+                <div class="card-content white-text" style="background-color:#E75C5C">
+                    <span class="card-title"><i class="small mdi-hardware-mouse"></i>&nbsp;Technology</span>
+                    <p>
+                        Are you a technology company like us. Kickstart your creative ideas with a cool website today.
+                    </p>
+                </div>
+                <div class="card-action white">
+                    <a href="Business/Technology" style="color:red">Know more &gt;</a>
+                </div>
+            </div>
+        </div>
+        <div class="col s12 m3">
+            <div class="card">
+                <div class="card-content white-text" style="background-color:#E75C5C">
+                    <span class="card-title"><i class="small mdi-social-mood"></i>&nbsp;Personal</span>
+                    <p>
+                        Get a personal website. Portfolio, hobbie portal, gallery or birthday website as per your taste.
+                    </p>
+                </div>
+                <div class="card-action white">
+                    <a href="Business/Personal" style="color:red">Know more &gt;</a>
+                </div>
+            </div>
+        </div>
+    </div>
   
    <div class="row">
         <div class="col s12 m12">
@@ -41,12 +95,12 @@
                 </div>
                 <div class="card-action">
                     <a href="Business/School">
-                        <div class="btn waves-effect waves-light orange" style="margin:1px">
+                        <div class="btn waves-effect waves-light" style="margin:1px;background-color:#D87A00">
                             Request for a free school website
                             <i class="mdi-content-send right"></i>
                         </div>
                         <div class="fb-like"
-                             data-share="false"
+                             data-share="true"
                              data-width="450"
                              data-show-faces="true">
                         </div>
@@ -56,59 +110,6 @@
         </div>
     </div> 
 
-    <div class="row">
-        <div class="col s12 m3">
-            <div class="card teal">
-                <div class="card-content white-text">
-                    <span class="card-title"><i class="small mdi-maps-local-grocery-store"></i>&nbsp;Retail</span>
-                    <p>
-                        Grow your business with presence in the Internet. Add product lists, ads, e-commerce and more.
-                    </p>
-                </div>
-                <div class="card-action">
-                    <a href="Business/Retail">Know more</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card grey">
-                <div class="card-content white-text">
-                    <span class="card-title"><i class="small mdi-social-location-city"></i>&nbsp;RealEstate</span>
-                    <p>
-                        Enable buyers to have a virtual tour in and around your properties. Features gallery and more.
-                    </p>
-                </div>
-                <div class="card-action">
-                    <a href="Business/RealEstate">Know more</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card  lime darken-1">
-                <div class="card-content white-text">
-                    <span class="card-title"><i class="small mdi-hardware-mouse"></i>&nbsp;Technology</span>
-                    <p>
-                        Are you a technology company like us. Kickstart your creative ideas with a cool website today. 
-                    </p>
-                </div>
-                <div class="card-action">
-                    <a href="Business/Technology" style="color:antiquewhite">Know more</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s12 m3">
-            <div class="card blue">
-                <div class="card-content white-text">
-                    <span class="card-title"><i class="small mdi-social-mood"></i>&nbsp;Personal</span>
-                    <p>
-                        Get a personal website. Portfolio, hobbie portal, gallery or birthday website as per your taste.
-                    </p>
-                </div>
-                <div class="card-action">
-                    <a href="Business/Personal">Know more</a>
-                </div>
-            </div>
-        </div>
-    </div>
+ 
 </div>
 
