--- a/MvcApp1/Views/Shared/_Layout.cshtml
+++ b/MvcApp1/Views/Shared/_Layout.cshtml
@@ -33,10 +33,12 @@
     <!-- Navigation Bar -->
     <div class="navbar-fixed">
         <!-- Navigation for Desktop screens -->
-        <nav>
+        <nav style="background-color: #f9a02c;">
             <div class="nav-wrapper">
                 <div class="col s12">
-                    <a href=@Url.Action("Index","Home") class="brand-logo" style="padding-left:20px">Paperseed</a>
+                    <a href=@Url.Action("Index","Home") class="brand-logo" style="padding-left:20px;padding-right:20px;background-color:white;color:red;font-weight:600;">
+                        Paperseed
+                    </a>
                     <!-- Dropdown Structure -->
                     <ul id="dropdown1" class="dropdown-content">
                         <li>
@@ -68,7 +70,7 @@
                         <li>
                             @Html.ActionLink("Login", "Login", "Account")
                         </li>
-                        <li style="border-right:1px solid #ce4040">
+                        <li style="border-right:1px solid #E28204">
                             @Html.ActionLink("Register", "Register", "Account")
                         </li>
                         }
@@ -81,41 +83,41 @@
             </div>
         </nav>
         <!-- Navigation compatible with small screens -->
-        <nav class="hide-on-large-only">
-            <div class="nav-wrapper">
-                <a href=@Url.Action("Index","Home") class="brand-logo" style="padding-left:20px">Paperseed</a>
-                <ul id="nav-mobile" class="right side-nav">
-                    <!-- Dropdown Trigger -->
-                    @if (Request.IsAuthenticated)
-                    {
-                        var message = "Hello " + User.Identity.Name + "!";
+        <nav class="hide-on-large-only" style="background-color: #f9a02c;">
+            <div class=" nav-wrapper">
+            <a href=@Url.Action("Index","Home") class="brand-logo" style="padding-left:20px;padding-right:20px;color:white;">Paperseed</a>
+            <ul id="nav-mobile" class="right side-nav">
+                <!-- Dropdown Trigger -->
+                @if (Request.IsAuthenticated)
+                {
+                    var message = "Hello " + User.Identity.Name + "!";
                     <li>
                         <a class="dropdown-button" href="#!" data-activates="dropdown1">
                             @message
                             <i class="mdi-navigation-arrow-drop-down right" style="margin-left:0px"></i>
                         </a>
                     </li>
-                    }
-                    else
-                    {
+                }
+                else
+                {
                     <li>
                         @Html.ActionLink("Login", "Login", "Account")
                     </li>
                     <li style="border-right:0px solid #ce4040">
                         @Html.ActionLink("Register", "Register", "Account")
                     </li>
-                    }
+                }
 
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+                <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <li>@Html.ActionLink("About", "About", "Home")</li>
+                <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+            </ul>
 
-                <!-- Include this line below -->
-                <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
-                <!-- End -->
+            <!-- Include this line below -->
+            <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
+            <!-- End -->
 
-            </div>
+</div>
         </nav>
     </div>
 
@@ -128,7 +130,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="page-footer">
+    <footer class="page-footer" style="background-color: #9D8C77;">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
@@ -147,7 +149,7 @@
         </div>
         <div class="footer-copyright">
             <div class="container">
-                <p> ©  @DateTime.Now.Year - Paperseed.in</p>
+                <p> ©  2015 - Paperseed.in</p>
                 <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
             </div>
         </div>
@@ -163,7 +165,7 @@
                 inDuration: 300,
                 outDuration: 225,
                 constrain_width: true, // Does not change width of dropdown to that of the activator
-                hover: true, // Activate on hover
+                hover: false, // Activate on hover
                 alignment: 'right', // Aligns dropdown to left or right edge (works with constrain_width)
                 gutter: 0, // Spacing from edge
             }
