--- a/MvcApp1/Views/Account/Login.cshtml
+++ b/MvcApp1/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Log in";
 }
 
-<div class="container z-depth-1" style="background: url(/Images/leatherbg.jpg) no-repeat center center">
+<div class="container z-depth-1" style="background: url(/Images/leatherbg.jpg); background-size:cover">
     <div class="section" id="loginForm" style="width:300px;margin: 0px auto; padding:5px">
         <fieldset style="background-color:white;">
             <legend style="font-size:larger; font-weight:bolder">Login</legend>
