--- a/MvcApp1/Views/Home/About.cshtml
+++ b/MvcApp1/Views/Home/About.cshtml
@@ -2,38 +2,35 @@
     ViewBag.Title = "About";
 }
 
-@*<hgroup class="title">
-    <h2>@ViewBag.Message</h2>
-</hgroup>*@
-
 <div class="" style="">
-<div class="" style="border:solid 1px #B88D54; height:180px; background-color:#B88D54">
-    <div style="width:75%;margin: 0 auto; color:white">
-        <h6 style="font-weight:bold">About</h6>
-        <h2 style="font-weight:900">Paperseed</h2>
-    </div>
-</div>
-<div class="" style="height:400px;width:75%;margin: 0 auto;">
-    <div class="" style="border-radius:15px;background-color:white; padding:10px 20px 10px 20px; float:left; margin-top:-50px;min-width:400px; width:75%; height:400px;">
-        <h5>Who we are..</h5>
-    </div>
-    <div class="" style="padding-left:20px;float:right; width:25%; height:350px">
-        <h6>Contact us</h6>
-        <div style="border-radius:10px; padding:7px; background-color:#F9E4B8; height:150px;">
-            Address
-        </div>
-        <h6>Services</h6>
-        <div style="border-radius:10px; padding:7px; background-color:#F9E4B8; height:150px;">
-            <ul>
-                <li>Technology partner</li>
-                <li>Consulting</li>
-                <li>Web designing</li>
-                <li>Hosting</li>
-            </ul>
+    <div class="" style="height:160px; background-image:url(/Images/slider1.jpg); background-size:cover">
+        <div class="container" style="padding-top:5px;color:white">
+            <h6 style="font-weight:bold">About</h6>
+            <h2 style="font-weight:600;margin-top:5px">Paperseed</h2>
         </div>
     </div>
-</div>
-
+    <div class="container" style="">
+        <div class="row">
+            <div class="col s12 m12 l9 z-depth-1" style="border-radius:15px;background-color:white;margin-top:-65px; padding:20px;height:450px;">
+                <h5>Who we are..</h5>
+            </div>
+            <div class="col s12 m12 l3" style="padding-left:20px;height:350px">
+                <h6>Contact us</h6>
+                <div class="yellow lighten-2 z-depth-1" style="border-radius:10px; padding:7px;height:160px;">
+                    Address
+                </div>
+                <h6>Services</h6>
+                <div class="yellow lighten-2 z-depth-1" style="border-radius:10px; padding:7px;height:160px;">
+                    <ul>
+                        <li>Technology partner</li>
+                        <li>Consulting</li>
+                        <li>Web designing</li>
+                        <li>Hosting</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 @*<article>
