--- a/MvcApp1/Views/Home/Index.cshtml
+++ b/MvcApp1/Views/Home/Index.cshtml
@@ -31,8 +31,8 @@
     <div class="row">
         <div class="col s12 m3">
             <div class="card">
-                <div class="card-content white-text" style="background-color:#E75C5C">
-                    <span class="card-title"><i class="small mdi-maps-local-grocery-store"></i>&nbsp;Retail</span>
+                <div class="card-content yellow lighten-2" @*style="background-color:#E75C5C"*@>
+                    <span class="card-title deep-orange-text" style="font-weight:400"><i class="small mdi-maps-local-grocery-store"></i>&nbsp;Retail</span>
                     <p>
                         Grow your business with presence in the Internet. Add product lists, ads, e-commerce and more.
                     </p>
@@ -44,8 +44,8 @@
         </div>
         <div class="col s12 m3">
             <div class="card">
-                <div class="card-content white-text" style="background-color:#E75C5C">
-                    <span class="card-title"><i class="small mdi-social-location-city"></i>&nbsp;RealEstate</span>
+                <div class="card-content yellow lighten-2">
+                    <span class="card-title deep-orange-text" style="font-weight:400"><i class="small mdi-social-location-city"></i>&nbsp;RealEstate</span>
                     <p>
                         Enable buyers to have a virtual tour in and around your properties. Features gallery and more.
                     </p>
@@ -57,8 +57,8 @@
         </div>
         <div class="col s12 m3">
             <div class="card">
-                <div class="card-content white-text" style="background-color:#E75C5C">
-                    <span class="card-title"><i class="small mdi-hardware-mouse"></i>&nbsp;Technology</span>
+                <div class="card-content yellow lighten-2">
+                    <span class="card-title deep-orange-text" style="font-weight:400"><i class="small mdi-hardware-mouse"></i>&nbsp;Technology</span>
                     <p>
                         Are you a technology company like us. Kickstart your creative ideas with a cool website today.
                     </p>
@@ -70,8 +70,8 @@
         </div>
         <div class="col s12 m3">
             <div class="card">
-                <div class="card-content white-text" style="background-color:#E75C5C">
-                    <span class="card-title"><i class="small mdi-social-mood"></i>&nbsp;Personal</span>
+                <div class="card-content yellow lighten-2">
+                    <span class="card-title deep-orange-text" style="font-weight:400"><i class="small mdi-social-mood"></i>&nbsp;Personal</span>
                     <p>
                         Get a personal website. Portfolio, hobbie portal, gallery or birthday website as per your taste.
                     </p>
@@ -85,7 +85,7 @@
   
    <div class="row">
         <div class="col s12 m12">
-            <div class="card  yellow lighten-2">
+            <div class="card  yellow lighten-4">
                 <div class="card-content black-text">
                     <span class="card-title deep-orange-text"><i class="small mdi-action-face-unlock"></i>&nbsp;Free for Schools!</span>
                     <p>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="card-action">
                     <a href="Business/School">
-                        <div class="btn waves-effect waves-light" style="margin:1px;background-color:#D87A00">
+                        <div class="btn waves-effect waves-light orange lighten-1">
                             Request for a free school website
                             <i class="mdi-content-send right"></i>
                         </div>
