--- a/MvcApp1/Views/Business/Retail.cshtml
+++ b/MvcApp1/Views/Business/Retail.cshtml
@@ -11,7 +11,7 @@
         <div class="section no-pad-bot">
             <div class="container">
                 <br><br>
-                <h1 class="header center teal-text text-lighten-2">The Everyone's Story</h1>
+                <h1 class="header center teal-text text-lighten-2">Are you a big fish in a small pond</h1>
                 <div class="row center">
                     <h5 class="header col s12 light">Get ready for a leap into a whole new world!!!</h5>
                 </div>
@@ -100,13 +100,17 @@
         <div class="parallax"><img src="~/Images/NewWorld.jpg" alt="Unsplashed background img 3"></div>
     </div>
 
+    <div class=" col hide-on-small-only m3 l2">
+        <div class="fixed-action-btn pinned" style="bottom: 45px; right: 24px;">
+            <ul>
+                <li><a class=" btn-floating red"><i class="large mdi-editor-insert-chart"></i></a></li>&nbsp;&nbsp;
+                <li><a class=" btn-floating yellow darken-1"><i class="large mdi-editor-format-quote"></i></a></li>&nbsp;&nbsp;
+                <li><a class=" btn-floating green"><i class="large mdi-editor-publish"></i></a></li>&nbsp;&nbsp;
+                <li><a class=" btn-floating blue"><i class="large mdi-editor-attach-file"></i></a></li>&nbsp;&nbsp;
+            </ul>
+        </div>
+    </div>
 
-
-
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="../../dist/js/materialize.js"></script>
-    <script src="js/init.js"></script>
 
 </body>
 </html>
